# LongNum_1st_project

./: CMakeLists.txt  README.md  longnum.h  longnum_realization.cpp  main.cpp  test.cpp
headers/: longnum.hpp
realization/: longnum_realization.cpp
tests/: test.cpp  test2.cpp  test_.cpp
